add OAUTH_REDIRECT_URI as env

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ YOUTUBE_CLIENT_ID=
 YOUTUBE_CLIENT_SECRET=
 BASIC_AUTH_USER=
 BASIC_AUTH_PASS=
+OAUTH_REDIRECT_URI=https://youtube-api.xyz.com/oauth/callback
